@@ -487,15 +487,50 @@ static int _thin_target_percent(void **target_state __attribute__((unused)),
 
 static int _thin_target_present(struct cmd_context *cmd,
 				const struct lv_segment *seg,
-				unsigned *attributes __attribute__((unused)))
+				unsigned *attributes)
 {
 	static int _checked = 0;
 	static int _present = 0;
+	static int _attrs = 0;
+	uint32_t maj, min, patchlevel;
 
 	if (!_checked) {
 		_present = target_present(cmd, THIN_MODULE, 1);
+
+		if (!target_version(THIN_MODULE, &maj, &min, &patchlevel)) {
+			log_error("Cannot read " THIN_MODULE " target version.");
+			return 0;
+		}
+		log_debug("Target " THIN_MODULE " has version %d:%d:%d.",
+			  maj, min, patchlevel);
+
+		/* For testing allow to override via shell variable */
+		if (getenv("LVM_THIN_VERSION_MIN"))
+			min = atoi(getenv("LVM_THIN_VERSION_MIN"));
+
+		if (maj >=1 && min >= 1)
+			_attrs |= THIN_FEATURE_DISCARD;
+		else
+			log_verbose("Target " THIN_MODULE
+				    " without discard support.");
+
+		if (maj >=1 && min >= 1)
+			_attrs |= THIN_FEATURE_EXTERNAL_ORIGIN;
+		else
+			log_verbose("Target " THIN_MODULE
+				    " without external origin support.");
+#if 0
+		if (maj >=1 && min >= 1)
+			_attrs |= THIN_FEATURE_BLOCK_SIZE;
+		else
+			log_verbose("Target " THIN_MODULE
+				    " without non power of 2 block size.");
+#endif
 		_checked = 1;
 	}
+
+	if (attributes)
+		*attributes = _attrs;
 
 	return _present;
 }
